#741: copy default profile (will raise an error if chrome is already started)